--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "csurf": "^1.x.x",
     "emailjs": "^0.3.x",
     "express": "^4.12.x",
+    "express-fileupload": "^0.1.1",
     "express-session": "^1.x.x",
+    "file-upload": "0.0.0",
     "helmet": "^0.9.x",
     "jade": "^1.x.x",
     "method-override": "^2.x.x",
     "mongoose": "4.x.x",
     "morgan": "^1.x.x",
+    "multer": "^1.3.0",
     "passport": "^0.2.x",
     "passport-facebook": "^2.x.x",
     "passport-github": "^0.1.x",
