--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "4.x.x",
     "morgan": "^1.x.x",
     "multer": "^1.3.0",
+    "node-schedule": "^1.2.0",
     "passport": "^0.2.x",
     "passport-facebook": "^2.x.x",
     "passport-github": "^0.1.x",
