Added SSL docs, but https not running properly?

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "express-fileupload": "^0.1.1",
     "express-session": "^1.x.x",
     "file-upload": "0.0.0",
+    "fs": "0.0.1-security",
     "helmet": "^0.9.x",
+    "https": "^1.0.0",
     "jade": "^1.x.x",
     "method-override": "^2.x.x",
     "mongoose": "4.x.x",
